@@ -56,6 +56,12 @@ MOD_RESOURCE_CATALOG = $(MOD_BUILD_DIR)/resource-catalog
 
 MOD_RMI_CLASS_CATALOG = $(MOD_BUILD_DIR)/rmi-class-catalog
 
+# Create a macro for recusively invoking Make.  --unix seems
+# to tame things under Windows.  We don't want or need any builtin
+# rules.
+
+RECURSE := $(MAKE) --unix --no-builtin-rules
+
 # Find out what out platform is.  Must set a value for SITE_PLATFORM.
 # The LocalConfig can set other things (such as locations of tools,
 # libraries, etc.)  It is optional.
